--- a/BCandSC_CSharp/Pages/Matchday.cshtml
+++ b/BCandSC_CSharp/Pages/Matchday.cshtml
@@ -12,44 +12,44 @@
 
     <style>
 
-    /*    p {
-            margin-top: 40px;
-            margin-bottom: 1rem;
-            padding: 20px;
-        }
-*/
+        /*    p {
+                                                            margin-top: 40px;
+                                                            margin-bottom: 1rem;
+                                                            padding: 20px;
+                                                        }
+                                                */
         .container {
             background-color: #262626;
             width: 100%;
             height: 100%;
         }
 
-  /*      .form-control {
-            display: block;
-            width: 100%;
-            padding: .375rem .75rem;
-            font-size: 1rem;
-            line-height: 1.5;
-            color: #495057;
-            background-color: #fff;
-            background-clip: padding-box;
-            border: 1px solid #ced4da;
-            border-radius: .25rem;
-            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-            transition-duration: 0.15s, 0.15s;
-        }*/
-/*
-        .form-group {
-            margin-bottom: 1rem;
-            text-align: center;
-        }
+        /*      .form-control {
+                                                            display: block;
+                                                            width: 100%;
+                                                            padding: .375rem .75rem;
+                                                            font-size: 1rem;
+                                                            line-height: 1.5;
+                                                            color: #495057;
+                                                            background-color: #fff;
+                                                            background-clip: padding-box;
+                                                            border: 1px solid #ced4da;
+                                                            border-radius: .25rem;
+                                                            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                                                            transition-duration: 0.15s, 0.15s;
+                                                        }*/
+        /*
+                                                        .form-group {
+                                                            margin-bottom: 1rem;
+                                                            text-align: center;
+                                                        }
 
-        .pb-3, .py-3 {
-            padding-bottom: 1rem !important;
-            margin: 20;
-            margin: 20px;
-        }
-*/
+                                                        .pb-3, .py-3 {
+                                                            padding-bottom: 1rem !important;
+                                                            margin: 20;
+                                                            margin: 20px;
+                                                        }
+                                                */
         label {
             text-align: center;
             font-weight: 250;
@@ -116,7 +116,6 @@
             margin-top: 20px;
             margin-bottom: 20px;
             border-radius: 20px;
-           
         }
 
         .carousel-inner {
@@ -146,12 +145,12 @@
                 border-color: #000;
             }
 
-     /*   .modeOneOne {
-            display: block;
-            margin: 0 auto;
-        }
-*/
-        
+        /*   .modeOneOne {
+                                                            display: block;
+                                                            margin: 0 auto;
+                                                        }
+                                                */
+
     </style>
 
     ViewData["Title"] = "Willkommen zu Spieltag " + Model.Matchday;
@@ -175,62 +174,37 @@
 
 
         <p>
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+            UserName, AccountBalance, Spieltag
         </p>
 
-
-
-
-
-
-
         <div class="row">
-
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body1">
-                        <h5 class="card-title">1 vs 1 Mode</h5>
-                        <form method="post">
-                            <div class="form-group">
-                                <label asp-for="TeamName"></label>
-                                <input asp-for="TeamName" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Spieltag starten" class="btn btn-primary" />
-                            </div>
-                        </form>
-                    </div>
-                   
-
-                </div>
-            </div>
-
-
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Multiplayer Mode</h5>
+                        <h5 class="card-title">Teamname</h5>
                         <form method="post">
                             <div class="form-group">
-                                <label asp-for="TeamName"></label>
-                                <input asp-for="TeamName" class="form-control" />
+                                
                             </div>
                             <div class="form-group">
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Spieltag starten" class="btn btn-primary" />
                             </div>
                         </form>
                     </div>
-                   
+
 
                 </div>
             </div>
+
+            <div class="col-sm-6" style="display: grid; align-items: center;">
+                <form method="post">
+                    <div class="form-group">
+                        <input type="submit" value="Spieltag starten" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+
         </div>
 
 
@@ -242,7 +216,7 @@
         </p>
 
 
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -267,7 +241,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div> 
+        </div>
 
 
 
